--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -3,29 +3,21 @@
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
   </p>
   <mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    <input matInput (keyup)="baylorStore.setFilter($event.target.value)" placeholder="Filter">
   </mat-form-field>
   <span class="example-spacer"></span>
   <a routerLink="/add/activity" mat-icon-button *ngIf="baylorStore.canAddActivity">
     <mat-icon>add</mat-icon>
   </a>
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
-      <!--<mat-table #table [dataSource]="dataSource" matSort>-->
+    <table mat-table [dataSource]="baylorStore.processedActivities" matSort (matSortChange)="baylorStore.sortActivities($event)">
       <ng-container matColumnDef="activityCode">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Activity code</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="activityCode"> Activity code</th>
         <td mat-cell *matCellDef="let element"> {{element.activityCode}}</td>
       </ng-container>
 
-      <!--<ng-container matColumnDef="transactionCode">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Transaction code</th>
-        <td mat-cell *matCellDef="let element">
-          {{element.transactionCode}}
-        </td>
-      </ng-container>-->
-
       <ng-container matColumnDef="activity">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Activity</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="activity"> Activity</th>
         <td mat-cell *matCellDef="let element"> {{element.activity}}</td>
       </ng-container>
 
@@ -44,31 +36,15 @@
         <td mat-cell *matCellDef="let element"> {{element.plannedEndDate}}</td>
       </ng-container>
 
-      <!-- <ng-container matColumnDef="projectName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Project</th>
-        <td mat-cell *matCellDef="let element"> {{element.projectName}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="resultArea">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Result area</th>
-        <td mat-cell *matCellDef="let element"> {{element.resultArea}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="objective">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Objective</th>
-        <td mat-cell *matCellDef="let element"> {{element.objective}}</td>
-      </ng-container> -->
-
       <ng-container matColumnDef="activityStatus">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
         <td mat-cell *matCellDef="let element" [ngClass]="element.activityStatus"> {{element.activityStatus}}</td>
       </ng-container>
 
-      <!--<ng-container matColumnDef="implementor">
+      <ng-container matColumnDef="implementor">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Implementor</th>
         <td mat-cell *matCellDef="let element"> {{element.implementor}}</td>
-      </ng-container>-->
-
+      </ng-container>
 
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Details</th>
@@ -94,9 +70,8 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <!--</mat-table>-->
 
-    <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20,50]" [showFirstLastButtons]="true">
+    <mat-paginator #paginator [pageSize]="baylorStore.pageInfo.pageSize" [pageSizeOptions]="[5, 10, 20,50]" [showFirstLastButtons]="true" [length]="baylorStore.total" (page)="baylorStore.pager($event)">
     </mat-paginator>
   </div>
 
