--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -10,7 +10,8 @@
     <mat-icon>add</mat-icon>
   </a>
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="baylorStore.processedActivities" matSort (matSortChange)="baylorStore.sortActivities($event)">
+    <table mat-table [dataSource]="baylorStore.processedActivities" matSort
+           (matSortChange)="baylorStore.sortActivities($event)">
       <ng-container matColumnDef="activityCode">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="activityCode"> Activity code</th>
         <td mat-cell *matCellDef="let element"> {{element.activityCode}}</td>
@@ -38,7 +39,7 @@
 
       <ng-container matColumnDef="activityStatus">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-        <td mat-cell *matCellDef="let element" [ngClass]="element.activityStatus"> {{element.activityStatus}}</td>
+        <td mat-cell *matCellDef="let element" [ngClass]="element.cls"> {{element.activityStatus}}</td>
       </ng-container>
 
       <ng-container matColumnDef="implementor">
@@ -53,15 +54,27 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <a *ngIf="baylorStore.canAddReport && element.activityStatus !== 'complete'" mat-menu-item [routerLink]="['/activities', element.trackedEntityInstance]">
-              Add Summary Report
+            <a *ngIf="element.canImplement || !element.activityStatus" mat-menu-item
+               (click)="baylorStore.changeActivityStatus(element.trackedEntityInstance,'Ongoing')">
+              Start Implementing
             </a>
 
-            <a *ngIf="baylorStore.canEditReport && element.activityStatus === 'complete' && element.report.reportStatus !== 'Approved'" mat-menu-item [routerLink]="['/activities', element.trackedEntityInstance]">
+            <a *ngIf="element.activityStatus === 'Ongoing'" mat-menu-item
+               (click)="baylorStore.changeActivityStatus(element.trackedEntityInstance,'Implemented')">
+              Mark as Implemented
+            </a>
+            <a *ngIf="baylorStore.canAddReport && element.activityStatus === 'Implemented'" mat-menu-item
+               (click)="viewReport(element.trackedEntityInstance)">
+              Add Summary Report
+            </a>
+            <a
+              *ngIf="baylorStore.canEditReport && element.activityStatus === 'Report Submitted'"
+              mat-menu-item [routerLink]="['/activities', element.trackedEntityInstance]">
               Edit Summary Report
             </a>
             <a *ngIf="element.download !== null" mat-menu-item href="{{element.download}}">Download Attached Report</a>
-            <a *ngIf="element.activityStatus !== 'complete' && baylorStore.canEditActivity" mat-menu-item (click)="openEditDialog({index:i},element)">Edit
+            <a *ngIf="element.canImplement && baylorStore.canEditActivity" mat-menu-item
+               (click)="openEditDialog({index:i},element)">Edit
               Activity</a>
           </mat-menu>
         </td>
@@ -71,9 +84,8 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator #paginator [pageSize]="baylorStore.pageInfo.pageSize" [pageSizeOptions]="[5, 10, 20,50]" [showFirstLastButtons]="true" [length]="baylorStore.total" (page)="baylorStore.pager($event)">
+    <mat-paginator #paginator [pageSize]="baylorStore.pageInfo.pageSize" [pageSizeOptions]="[5, 15, 10, 20, 50, 100]"
+                   [showFirstLastButtons]="true" [length]="baylorStore.total" (page)="baylorStore.pager($event)">
     </mat-paginator>
   </div>
-
-
 </div>
