--- a/src/app/issue/issue.component.html
+++ b/src/app/issue/issue.component.html
@@ -10,21 +10,40 @@
     <mat-icon>add</mat-icon>
   </a>
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="baylorStore.processedIssues" matSort>
       <!-- Generic column definition -->
-      <ng-container matColumnDef="transactionCode">
+      <!--<ng-container matColumnDef="transactionCode">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Activity Transaction Code</th>
         <td mat-cell *matCellDef="let element"> {{element.transactionCode}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="orgUnitName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Organisation</th>
-        <td mat-cell *matCellDef="let element"> {{element.orgUnitName}}</td>
+      </ng-container>-->
+      <ng-container matColumnDef="activity">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Activity</th>
+        <td mat-cell *matCellDef="let element"> {{element.activity}}</td>
       </ng-container>
 
       <ng-container matColumnDef="issue">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Issue</th>
         <td mat-cell *matCellDef="let element"> {{element.issue}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="registrationDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Registered on</th>
+        <td mat-cell *matCellDef="let element"> {{element.registrationDate}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="orgUnitName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Reported In</th>
+        <td mat-cell *matCellDef="let element"> {{element.orgUnitName}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="reportedBy">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Reported By</th>
+        <td mat-cell *matCellDef="let element"> {{element.reportedBy}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="responsiblePerson">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Responsible Person</th>
+        <td mat-cell *matCellDef="let element"> {{element.responsiblePerson}}</td>
       </ng-container>
 
       <ng-container matColumnDef="issueStatus">
@@ -49,7 +68,8 @@
           <mat-menu #menu="matMenu">
             <!--<a mat-menu-item >Issue Details</a>-->
             <a mat-menu-item (click)="viewActions(element)">View Actions</a>
-            <a *ngIf="baylorStore.canAddAction" mat-menu-item (click)="openActionDialog({},element,index)">Add
+            <a *ngIf="baylorStore.canAddAction" mat-menu-item
+               (click)="openActionDialog({},element.trackedEntityInstance)">Add
               Action</a>
           </mat-menu>
         </td>
@@ -59,7 +79,8 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20,50]" [showFirstLastButtons]="true">
+    <mat-paginator #paginator [pageSize]="baylorStore.pageInfo.pageSize" [pageSizeOptions]="[5, 15, 10, 20, 50, 100]"
+                   [showFirstLastButtons]="true" [length]="baylorStore.total" (page)="baylorStore.issuePager($event)">
     </mat-paginator>
   </div>
 </div>
