--- a/src/app/issue/report-issue.component.html
+++ b/src/app/issue/report-issue.component.html
@@ -1,55 +1,72 @@
-<p *ngIf="loaderService.isLoading | async">
-  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-</p>
-<mat-form-field *ngIf="!noData">
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-</mat-form-field>
-<div class="mat-elevation-z8" *ngIf="!noData">
-  <table mat-table [dataSource]="dataSource" matSort>
-    <!-- Generic column definition -->
-    <ng-container matColumnDef="transactionCode">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Activity Transaction Code</th>
-      <td mat-cell *matCellDef="let element"> {{element.transactionCode}}</td>
-    </ng-container>
+<div *mobxAutorun>
+  <p *ngIf="loaderService.isLoading | async">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  </p>
+  <mat-form-field *ngIf="!noData">
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  </mat-form-field>
+  <div class="mat-elevation-z8" *ngIf="!noData">
+    <table mat-table [dataSource]="baylorStore.processedIssues" matSort>
+      <!-- Generic column definition -->
+      <ng-container matColumnDef="activity">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Activity</th>
+        <td mat-cell *matCellDef="let element"> {{element.activity}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="orgUnit">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Organisation</th>
-      <td mat-cell *matCellDef="let element"> {{element.orgUnit}}</td>
-    </ng-container>
+      <ng-container matColumnDef="issue">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Issue</th>
+        <td mat-cell *matCellDef="let element"> {{element.issue}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="issue">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Issue</th>
-      <td mat-cell *matCellDef="let element"> {{element.issue}}</td>
-    </ng-container>
+      <ng-container matColumnDef="registrationDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Registered on</th>
+        <td mat-cell *matCellDef="let element"> {{element.registrationDate}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="issueStatus">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Issue Status</th>
-      <td mat-cell *matCellDef="let element" [ngClass]="element.issueStatus">
-        {{element.issueStatus}}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="orgUnitName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Reported In</th>
+        <td mat-cell *matCellDef="let element"> {{element.orgUnitName}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-      <td mat-cell *matCellDef="let element">
-        <button type="button" mat-icon-button [matMenuTriggerFor]="menu">
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <!--<a mat-menu-item >Issue Details</a>-->
-          <a mat-menu-item (click)="viewActions(element)">View Actions</a>
-          <!--<a mat-menu-item>Add Action</a>-->
-        </mat-menu>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="reportedBy">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Reported By</th>
+        <td mat-cell *matCellDef="let element"> {{element.reportedBy}}</td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20,50]" [showFirstLastButtons]="true">
-  </mat-paginator>
+      <ng-container matColumnDef="responsiblePerson">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Responsible Person</th>
+        <td mat-cell *matCellDef="let element"> {{element.responsiblePerson}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="issueStatus">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Issue Status</th>
+        <td mat-cell *matCellDef="let element" [ngClass]="element.issueStatus">
+          {{element.issueStatus}}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+        <td mat-cell *matCellDef="let element">
+          <button type="button" mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <!--<a mat-menu-item >Issue Details</a>-->
+            <a mat-menu-item (click)="viewActions(element)">View Actions</a>
+            <!--<a mat-menu-item>Add Action</a>-->
+          </mat-menu>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20,50]" [showFirstLastButtons]="true">
+    </mat-paginator>
+  </div>
+
+  <div *ngIf="noData">Issues empty</div>
 </div>
-
-<div *ngIf="noData">Issues empty</div>
 
 
